# gc1039-winword-converter

./: CMakeLists.txt  README.md  convapi.h  converr.h  main.cpp
